Don't free rtpinfo GString when it is NULL

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=723554